--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
     <string name="carrier"><a href="http://alumni.amity.edu/jobs.aspx">Careers in Amity University</a></string>
 
     <string name="admis"><a href="https://www.amity.edu/admission-procedure-domestic.aspx">Amity University Admission Procedure</a></string>
-    <string name="event">Upcoming Events</string>
     <string name="acc"><a href="https://acc.amityaump.com/">Amity Coding Club</a></string>
     <string name="virtual360"><a href="https://www.google.co.in/maps/place/Amity+University+Gwalior/@26.2729206,78.2292078,2a,75y,105.15h,90t/data=!3m6!1e1!3m4!1sYISDbuM5MdCTxAeqeEG_PA!2e0!7i13312!8i6656!4m7!3m6!1s0x3976c0e647bece07:0xd848338a0d6a5393!8m2!3d26.2727152!4d78.2283897!14m1!1BCgIgARICCAI?hl=en">Amity 360 Virtual Tour</a></string>
 
@@ -65,6 +64,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-
+    <string name="Email">Email</string>
+    <string name="password">Password</string>
     <string name="home_second">Home Second</string>
+    <string name="message">Don\'t have account?</string>
 </resources>
