--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,11 @@ Amity University, Madhya Pradesh, is committed to create a centre of excellence 
 
     <string name="Results">Results</string>
     <string name="Campustour">360 Campus Tour</string>
+    <string name="Result">Result</string>
+    <string name="Notice">Notice</string>
+    <string name="Announcement">Announcement</string>
+
+
 
 
 </resources>
