--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,10 @@ Amity University, Madhya Pradesh, is committed to create a centre of excellence 
     <string name="descleader2">With a legacy spanning two decades, the Amity University has become a brand name in the world of education. The university represents a world-class education culture characterized by globally benchmarked campuses and infrastructure, outstanding students, path breaking research and strong partnerships forged with key industries. The university puts its best in terms of academics and designs a dynamic curriculum that empowers youth and gives them an agility to respond to the evolving paradigms of pedagogy and practice. We consider this agility and hands-on training essential for higher education today. My best wishes to all students.</string>
     <string name="leader1design">Vice Chancellor, AUMP</string>
     <string name="leader2design">Pro Vice-Chancellor, AUMP</string>
+    <string name="name">Name</string>
+    <string name="rohit_sharma">Rohit Sharma</string>
+    <string name="amiverse_user">Amiverse User</string>
+    <string name="amimail">ami@gmail.com</string>
 
     <string name="gold"> gold</string>
     <string name="silver"> silver</string>
